Add on-demand compaction REST/transport action
POST /_plugins/_serverless/storage/_compact triggers one immediate
compaction-candidacy check and publish attempt for a named shard,
without waiting out CompactionSchedulerTask's background interval and
without the core transport-layer work a real _forcemerge redirect would
need (core's _forcemerge chain only ever reaches an engine while a
writer is live, so it has no route to a writer-less shard today).

CompactionSchedulerTask's per-tick decision logic is factored into a
public static maybeCompact(...) so the scheduled task and this new
on-demand trigger share one implementation. TransportCompactionTriggerAction
mirrors the existing clone action's shape: no node routing needed since
the attempt operates purely against the shared object store and the
shard's CAS-guarded head.

Verified end to end over the real transport layer: a real 10-segment
shard is recognized as a candidate and merged to one segment; a never-
activated shard is a safe no-op.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>